
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

; Below is merged into v3.1.2

21-Jul-2013 Jean-Marie Simonet
 + [#31349] Display Error Message when Magic Quotes is Enabled. Thanks Brian Teeman
 #+ [#31488] Add Observer pattern to JTable (and use it for Tags implementation (which also fixes [#31339] too). Thanks Beat.

20-Jul-2013 Jean-Marie Simonet
 # [#31496] DEBUG_BACKTRACE_IGNORE_ARGS not supported in PHP 5.3.1-5.3.5. Thanks Beat
 # [#31533] User Interface allows tags in Banner Categories but it should not. Thanks Elin waring
 # [#31522] No tag fields in hathor - you can't write Tags in component items. Thanks Elin Waring

19-Jul-2013 Jean-Marie Simonet
 # [#31525] Files uninstall is failing due to missing variable. Thanks Michael Babker

17-Jul-2013 Jean-Marie Simonet
 # [#31476] Remove unneeded GROUP BY and fix duplicate article display. Thanks Thomas Hunziker
 # [#31445] Default value tag menu-items. Thanks Constantin Romankiewicz

14-Jul-2013 Jean-Marie Simonet
 # [#31455] Regression by [#31278]. Thanks Beat

12-Jul-2013 Jean-Marie Simonet
 # [#31362] Various PHP notices and strict errors. Thanks Mark Dexter
 # [#31376] JToolbar layout change breaks mobile. Thanks Roberto Segura

10-Jul-2013 Jean-Marie Simonet
 ^ [#31388] Admin login shows language option. Thanks Brian Teeman
 ^ [#31383] Article manager options. Thanks Brian Teeman
 # [#30957] System cache issue. Thanks Dennis Hermatski
 # [#31208] No border bottom right radius and border bottom top radius for buttons at com_finder view (2). Thanks Peter van Westen.

09-Jul-2013 Jean-Marie Simonet
 $ Updating installation lang files: eo-XX

08-Jul-2013 Jean-Marie Simonet